<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sirius.sample.ui.auth.auth_third.AuthThirdViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:src="@drawable/logo_sirius"  />





        <TextView
            android:id="@+id/firstHint"
            style="@style/Regular19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/auth_third_hint"
            android:textAllCaps="true"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/secondHint"
            style="@style/Regular15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/auth_third_identity2_hint"
            android:textAllCaps="true"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Regular15"
            android:padding="16dp"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="@{viewModel::onRegisterClick}"
            android:background="@drawable/btn_green_round"
            android:text="@string/auth_third_identity_btn_yes"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="32dp"
            android:background="@color/yellow"
            android:layout_marginRight="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="16dp"
            style="@style/Regular15"
            android:textColor="@color/yellow"
            android:onClick="@{viewModel::onNextClick}"
            android:text="@string/auth_third_identity_btn_no"/>

        <com.sirius.sample.design.IndicatorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/indicatorView"
            android:layout_gravity="center" />

    </LinearLayout>
</layout>