<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="16dp"
            app:contentPadding="16dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/blue2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="@style/Regular19"
                    android:text="@string/action_item_connect"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="8dp"
                        android:text="@string/action_decline"
                        android:gravity="center"
                        android:id="@+id/cancelBtn"
                        android:textAllCaps="true"
                        style="@style/Regular15"
                        android:textColor="@color/hintColor"
                        android:background="@drawable/btn_gray_round"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:id="@+id/yesBtn"
                        style="@style/Regular15"
                        android:textColor="@color/blue"
                        android:background="@drawable/btn_gray_round"
                        android:text="@string/action_yes"/>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>