<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sirius.sample.ui.credentials.CredentialsViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="32dp"
            android:background="@drawable/btn_yellow_top_round">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontMedium"
                android:textAllCaps="true"
                android:gravity="center"
                android:padding="16dp"
                android:textSize="19sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/title_credentials"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_gray_top_round">



            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"

                app:queryHint="@string/search_hint"
                android:background="@drawable/btn_gray_round"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:onClick="@{viewModel::onFilterClick}"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FontRegular"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:textColor="@color/gray_text_hint"
                    android:text="@string/filter_date_credential"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_gravity="center"

                    android:src="@drawable/ic_arrow_down"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/credentialsRecyclerView"
                android:orientation="vertical"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                tools:listitem="@layout/view_items_credentials"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginTop="16dp"/>




        </LinearLayout>

    </FrameLayout>
</layout>